# Vox-Machina

./: .gitignore  Cargo.toml  README.md
carved_rust/: Cargo.toml
carved_rust/src/: carved_rust.rs  lib.rs  svo.rs  svo_tests.rs  unity_interface_enums.rs  unity_interface_guid.rs  unity_interfaces.rs
carved_rust/src/ffi/: mod.rs  test.rs
carved_rust/src/svo/: cast_ray.rs  mod.rs  registration.rs  save_load.rs  set_block.rs  svo_tests.rs  test.rs  utils.rs  voxel_data.rs
carved_unity/Assets/: CameraController.cs  CameraTarget.cs  NewBehaviourScript.cs  SVO.cs  SVOController.cs  SvoTests.cs  TestCubePrefab.prefab  scene1.unity
carved_unity/Assets/Plugins/: libcarved_rust.bundle
carved_unity/Assets/scene1/: LightingData.asset
carved_unity/ProjectSettings/: AudioManager.asset  ClusterInputManager.asset  DynamicsManager.asset  EditorBuildSettings.asset  EditorSettings.asset  GraphicsSettings.asset  InputManager.asset  NavMeshAreas.asset  NetworkManager.asset  Physics2DSettings.asset  ProjectSettings.asset  QualitySettings.asset  TagManager.asset  TimeManager.asset  UnityAdsSettings.asset  UnityConnectSettings.asset
src/: app.rs  camera.rs  lib.rs  main.rs
src/graphics/: mod.rs  svo_graphics.rs
src/graphics/camera/: mod.rs
src/graphics/controller/: camera_controller.rs  dt_controller.rs  keys_down_controller.rs  mod.rs  mouse_position_controller.rs  svo_controller.rs
src/graphics/model/: key_down.rs  mod.rs
src/graphics/svo_graphics/: mod.rs  test.rs
src/shader/: cube_150.glslf  cube_150.glslv
src/svo/: mod.rs  registration.rs  test.rs
(+23 files in other folders)
